<resources>
    //principales
    <string name="app_nombre">My Crypto Now</string>
    <string name="app_slogan">\"Mi capital digital en un solo lugar\"</string>
    <string name="login_text">Login</string>
    <string name="acceder">Acceder</string>
    <string name="pregunta_registro">¿No tiene cuenta?</string>
    <string name="respuesta_registro">Registrate</string>
    <string name="usuario_desconocido">¿Usted no reconoce este usuario?</string>
    <string name="recuperar_contrasnia_pregunta">¿Olvido su contraseña?</string>
    <string name="regresar">Regresar</string>
    <string name="recuperar_contrasenia">Recuperar</string>
    <string name="registrar">Registrar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="detalle_crypto">Detalle crypto</string>
    <string name="nombre_crypto">Nombre crypto</string>
    <string name="registro_titulo">Registro</string>
    <string name="registro_solicitud_datos">Ingrese los siguientes datos</string>
    <string name="cantidad_mxn">Cantidad en MXN</string>
    <string name="signo_moneda">$</string>
    <string name="cantidad_moneda">$ 1,200,000</string>
    <string name="cantidad_criptos">Distribuido en :</string>
    <string name="creacion_exitosa">Se creo correctamente</string>

    //otros
    <string name="user">Nombre del usuario</string>
    <string name="correo">Correo del usuario</string>

    //Solicitud de datos
    <string name="ingresar_correo">Ingrese su correo</string>
    <string name="ingresar_contrasenia">Ingrese su contraseña</string>
    <string name="ingresar_contrasenia_confirmar">Confirme su contraseña</string>
    <string name="ingresar_nombre">Ingrese su Nombre(s)</string>
    <string name="ingresar_apPaterno">Ingrese su Apellido Paterno</string>
    <string name="ingresar_apMaterno">Ingrese su Apellido Materno</string>
    <string name="ingresar_usuario">Ingrese su Nombre de Usuario</string>


    //Agregar
    <string name="agregar">Agregar crypto</string>
    <string name="qr">Codigo QR</string>
    <string name="descripcion_agregar">Agrega la información de tu crypto</string>
    <string name="btnagregar">Agregar</string>
    <string name="btnregresar">Regresar</string>

    //Editar
    <string name="editar">Editar crypto</string>
    <string name="descripcion_editar">Edita la información de tu crypto</string>
    <string name="btneditar">Editar</string>
    <string name="edqr">Editar Codigo QR</string>

    //Listar
    <string name="listar">Listar crypto</string>
    <string name="lista_cryptos">Lista cryptos</string>
    <string name="solicitud_verificacion_correo">Hola estimado usuario.
    Para disfrutar de este contenido es necesario que confirme su dirección de correo.
    Le agradecemos su preferencia y siga disfrutando de la aplicación.</string>

    //Creditos
    <string name="descripcion_creditos">Creditos</string>
    <string name="acerca">Acerca de...</string>
    <string name="universidad">Instituto Tecnologico de Toluca</string>
    <string name="especialidad">Ingenieria en sistemas computacionales</string>
    <string name="alumno">Alumno:</string>
    <string name="nombre_max">Maximiliano Ovando Ramirez</string>
    <string name="nombre_imanol">Jesus Imanol Castano Gil</string>
    <string name="nombre_enrique">José Enrique Maldonado Verazas</string>
    <string name="materia">Desarrollo móvil</string>
    <string name="profesor">Profesora: Rocío Elizabeth Pulido Alba</string>
    <string name="clase">Lunes,Martes,Jueves de 5 a 7 PM</string>
    <string name="version">1.0 2021</string>

    //Menu
    <string name="menu_agregar">Agregar</string>
    <string name="menu_editar">Editar</string>

    //Navigation
    <string name="nav_header_desc">Descripcion de Mycriptonow</string>
    <string name="TituloNav">Mycriptonow</string>
    <string name="SloganNav">Slogan mycriptonow</string>

    //Info Crypto
    <string name="info_crypto">Info Crypto</string>
    <string name="valor_actual">Valor actual</string>
    <string name="tipo_crypto">Tipo de Crypto</string>
    <string name="direccion">Dirección: </string>
    <string name="cantidad">Cantidad: </string>
    <string name="nombre_billetera">Nombre Billetera: </string>

    //Home Admin
    <string name="panel_control_API">Panel de control API</string>
    <string name="creditos">Créditos</string>
    <string name="actualizar_precios_cryptos">Actualizar Precio Cryptos</string>

    //Lista de Accesos
    <string name="lista_accesos">Lista de Accesos</string>

    //Chats
    <string name="conversacion">Conversación</string>
    <string name="ingrese_mensaje">Ingrese su mensaje</string>
    <string name="cerrar_reporte">CERRAR REPORTE</string>
    <string name="title_activity_main">MainActivity</string>


    //Titulos navigation drawer
    <string name="menu_home">Home</string>
    <string name="menu_lista_cryptos">Lista Cryptos</string>
    <string name="menu_lista_mis_cryptos">Lista mis cryptos</string>
    <string name="menu_video_info">Video Ayuda</string>
    <string name="menu_dialog_agregar">Agregar</string>
    <string name="menu_lista_accesos">Lista mis accesos</string>
    <string name="menu_agregar_crypto">Agregar crypto</string>
    <string name="menu_editar_crypto">Editar crypto</string>
    <string name="menu_eliminar_crypto">Eliminar crypto</string>
    <string name="menu_reporte_errores">Reportar Error</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="menu_creditos">Creditos</string>
    <string name="action_logout">Logout</string>
    <string name="action_salir">Salir</string>

    //Cuadro de Dialogo
    <string name="detalles">DETALLES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>