<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bienvenida"
            android:icon="@drawable/ic_home"
            android:title="@string/bienvenido" />
        <item
            android:id="@+id/nav_admin_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lista_cryptos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lista_cryptos" />
        <item
            android:id="@+id/nav_lista_accesos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lista_accesos" />
    </group>

    <group>
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_creditos" />
    </group>
</menu>