<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.creditos.CreditosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creditos"
                android:textSize="30dp"
                android:layout_marginTop="@dimen/espaciado_normal"
                android:fontFamily="@font/robotoslab_bold"
                android:gravity="center"/>

            <ImageView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="196dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descripcion_creditos"
                app:srcCompat="@drawable/logotec"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/universidad"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/especialidad"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/materia"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alumno"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_max"
                android:textSize="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_pequenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_imanol"
                android:textSize="20dp"
                android:gravity="center"/>


            <TextView
                android:layout_marginTop="@dimen/espaciado_pequenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_enrique"
                android:textSize="20dp"
                android:gravity="center"/>


            <TextView
                android:layout_marginTop="@dimen/espaciado_amplio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesor"
                android:textSize="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clase"
                android:textSize="20dp"
                android:gravity="center"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:lottie_rawRes="@raw/bienvenida"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="20dp"
                android:gravity="center"/>




        </LinearLayout>






    </ScrollView>

</FrameLayout>