<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homeadmin.homeAdmin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-175dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/espaciado_amplio"
                android:fontFamily="@font/robotoslab_bold"
                android:text="@string/panel_control_API"
                android:textSize="@dimen/titulo_principal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/espaciado_normal"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/creditos"
                android:textSize="@dimen/grande_text" />


            <ImageView
                android:id="@+id/ivLogoSplash"
                android:layout_marginTop="@dimen/espaciado_normal"
                android:layout_width="@dimen/imagen_enorme"
                android:layout_height="@dimen/imagen_enorme"
                android:layout_gravity="center"
                android:src="@color/purple_200"/>




            <Button
                android:id="@+id/boton_regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/actualizar_precios_cryptos"
                />


        </LinearLayout>

    </ScrollView>

</FrameLayout>